[gd_scene load_steps=8 format=3 uid="uid://dpo6b3pi2ix02"]

[ext_resource type="Script" path="res://scenes/maps/game_map/GameMap.gd" id="1_k0j13"]
[ext_resource type="TileSet" uid="uid://dqpuie6vmj0rd" path="res://resources/tileset/map_tileset.tres" id="2_ndpu2"]
[ext_resource type="TileSet" uid="uid://ccawbuc7gu4ce" path="res://resources/tileset/empty_tiles.tres" id="4_7mtu1"]
[ext_resource type="Script" path="res://scenes/maps/game_map/ConstructionsLayer.gd" id="5_jut8w"]
[ext_resource type="TileSet" uid="uid://b7h0xx5g6a2ak" path="res://resources/textures/tiles/build_grid_tiles.tres" id="6_m3qse"]
[ext_resource type="PackedScene" uid="uid://ddefr32r5e1uw" path="res://scenes/maps/base/BaseArea.tscn" id="7_f2gkr"]
[ext_resource type="PackedScene" uid="uid://brtiv0p7w11i" path="res://scenes/maps/enemy_waves/EnemyWavesSpawner.tscn" id="8_6sipe"]

[node name="GameMap" type="Node2D"]
script = ExtResource("1_k0j13")

[node name="GroundLevel" type="TileMap" parent="."]
tile_set = ExtResource("2_ndpu2")
cell_quadrant_size = 64
format = 2
layer_0/tile_data = PackedInt32Array(0, 65537, 1, 1, 65537, 1, 2, 65537, 1, 3, 65537, 1, 4, 65537, 1, 5, 65537, 1, 6, 65537, 1, 7, 65537, 1, 8, 65537, 1, 9, 65537, 1, 10, 65537, 1, 11, 65537, 1, 12, 65537, 1, 13, 65537, 1, 14, 65537, 1, 15, 65537, 1, 16, 65537, 1, 17, 65537, 1, 18, 65537, 1, 19, 65537, 1, 65536, 65537, 1, 65537, 65537, 1, 65538, 65537, 1, 65539, 65537, 1, 65540, 65537, 1, 65541, 65537, 1, 65542, 65537, 1, 65543, 65537, 1, 65544, 65537, 1, 65545, 65537, 1, 65546, 65537, 1, 65547, 65537, 1, 65548, 65537, 1, 65549, 65537, 1, 65550, 65537, 1, 65551, 65537, 1, 65552, 65537, 1, 65553, 65537, 1, 65554, 65537, 1, 65555, 65537, 1, 131072, 65537, 1, 131073, 65537, 1, 131074, 65537, 1, 131075, 65537, 1, 131076, 65537, 1, 131077, 65537, 1, 131078, 65537, 1, 131079, 65537, 1, 131080, 65537, 1, 131081, 65537, 1, 131082, 65537, 1, 131083, 65537, 1, 131084, 65537, 1, 131085, 65537, 1, 131086, 65537, 1, 131087, 65537, 1, 131088, 65537, 1, 131089, 65537, 1, 131090, 65537, 1, 131091, 65537, 1, 196608, 65537, 1, 196609, 65537, 1, 196610, 65537, 1, 196611, 65537, 1, 196612, 65537, 1, 196613, 65537, 1, 196614, 65537, 1, 196615, 65537, 1, 196616, 65537, 1, 196617, 65537, 1, 196618, 65537, 1, 196619, 65537, 1, 196620, 65537, 1, 196621, 65537, 1, 196622, 65537, 1, 196623, 65537, 1, 196624, 65537, 1, 196625, 65537, 1, 196626, 65537, 1, 196627, 65537, 1, 262144, 65537, 1, 262145, 65537, 1, 262146, 65537, 1, 262147, 65537, 1, 262148, 65537, 1, 262149, 65537, 1, 262150, 65537, 1, 262151, 65537, 1, 262152, 65537, 1, 262153, 65537, 1, 262154, 65537, 1, 262155, 65537, 1, 262156, 65537, 1, 262157, 65537, 1, 262158, 65537, 1, 262159, 65537, 1, 262160, 65537, 1, 262161, 65537, 1, 262162, 65537, 1, 262163, 65537, 1, 327680, 65537, 1, 327681, 65537, 1, 327682, 65537, 1, 327683, 65537, 1, 327684, 65537, 1, 327685, 65537, 1, 327686, 65537, 1, 327687, 65537, 1, 327688, 65537, 1, 327689, 65537, 1, 327690, 65537, 1, 327691, 65537, 1, 327692, 65537, 1, 327693, 65537, 1, 327694, 65537, 1, 327695, 65537, 1, 327696, 65537, 1, 327697, 65537, 1, 327698, 65537, 1, 327699, 65537, 1, 393216, 65537, 1, 393217, 65537, 1, 393218, 65537, 1, 393219, 65537, 1, 393220, 65537, 1, 393221, 65537, 1, 393222, 65537, 1, 393223, 65537, 1, 393224, 65537, 1, 393225, 65537, 1, 393226, 65537, 1, 393227, 65537, 1, 393228, 65537, 1, 393229, 65537, 1, 393230, 65537, 1, 393231, 65537, 1, 393232, 65537, 1, 393233, 65537, 1, 393234, 65537, 1, 393235, 65537, 1, 458752, 65537, 1, 458753, 65537, 1, 458754, 65537, 1, 458755, 65537, 1, 458756, 65537, 1, 458757, 65537, 1, 458758, 65537, 1, 458759, 65537, 1, 458760, 65537, 1, 458761, 65537, 1, 458762, 65537, 1, 458763, 65537, 1, 458764, 65537, 1, 458765, 65537, 1, 458766, 65537, 1, 458767, 65537, 1, 458768, 65537, 1, 458769, 65537, 1, 458770, 65537, 1, 458771, 65537, 1, 524288, 65537, 1, 524289, 65537, 1, 524290, 65537, 1, 524291, 65537, 1, 524292, 65537, 1, 524293, 65537, 1, 524294, 65537, 1, 524295, 65537, 1, 524296, 65537, 1, 524297, 65537, 1, 524298, 65537, 1, 524299, 65537, 1, 524300, 65537, 1, 524301, 65537, 1, 524302, 65537, 1, 524303, 65537, 1, 524304, 65537, 1, 524305, 65537, 1, 524306, 65537, 1, 524307, 65537, 1, 589824, 65537, 1, 589825, 65537, 1, 589826, 65537, 1, 589827, 65537, 1, 589828, 65537, 1, 589829, 65537, 1, 589830, 65537, 1, 589831, 65537, 1, 589832, 65537, 1, 589833, 65537, 1, 589834, 65537, 1, 589835, 65537, 1, 589836, 65537, 1, 589837, 65537, 1, 589838, 65537, 1, 589839, 65537, 1, 589840, 65537, 1, 589841, 65537, 1, 589842, 65537, 1, 589843, 65537, 1, 655360, 65537, 1, 655361, 65537, 1, 655362, 65537, 1, 655363, 65537, 1, 655364, 65537, 1, 655365, 65537, 1, 655366, 65537, 1, 655367, 65537, 1, 655368, 65537, 1, 655369, 65537, 1, 655370, 65537, 1, 655371, 65537, 1, 655372, 65537, 1, 655373, 65537, 1, 655374, 65537, 1, 655375, 65537, 1, 655376, 65537, 1, 655377, 65537, 1, 655378, 65537, 1, 655379, 65537, 1, 720896, 65537, 1, 720897, 65537, 1, 720898, 65537, 1, 720899, 65537, 1, 720900, 65537, 1, 720901, 65537, 1, 720902, 65537, 1, 720903, 65537, 1, 720904, 65537, 1, 720905, 65537, 1, 720906, 65537, 1, 720907, 65537, 1, 720908, 65537, 1, 720909, 65537, 1, 720910, 65537, 1, 720911, 65537, 1, 720912, 65537, 1, 720913, 65537, 1, 720914, 65537, 1, 720915, 65537, 1, 786432, 65537, 1, 786433, 65537, 1, 786434, 65537, 1, 786435, 65537, 1, 786436, 65537, 1, 786437, 65537, 1, 786438, 65537, 1, 786439, 65537, 1, 786440, 65537, 1, 786441, 65537, 1, 786442, 65537, 1, 786443, 65537, 1, 786444, 65537, 1, 786445, 65537, 1, 786446, 65537, 1, 786447, 65537, 1, 786448, 65537, 1, 786449, 65537, 1, 786450, 65537, 1, 786451, 65537, 1, 851968, 65537, 1, 851969, 65537, 1, 851970, 65537, 1, 851971, 65537, 1, 851972, 65537, 1, 851973, 65537, 1, 851974, 65537, 1, 851975, 65537, 1, 851976, 65537, 1, 851977, 65537, 1, 851978, 65537, 1, 851979, 65537, 1, 851980, 65537, 1, 851981, 65537, 1, 851982, 65537, 1, 851983, 65537, 1, 851984, 65537, 1, 851985, 65537, 1, 851986, 65537, 1, 851987, 65537, 1, 917506, 65537, 1, 917507, 65537, 1, 917508, 65537, 1, 917509, 65537, 1, 917510, 65537, 1, 917511, 65537, 1, 917512, 65537, 1, 917513, 65537, 1, 917514, 65537, 1, 917515, 65537, 1, 917516, 65537, 1, 917517, 65537, 1, 917518, 65537, 1, 917519, 65537, 1, 917520, 65537, 1, 917521, 65537, 1, 917522, 65537, 1, 917523, 65537, 1, 983040, 65537, 1, 983041, 65537, 1, 983042, 65537, 1, 983043, 65537, 1, 983044, 65537, 1, 983045, 65537, 1, 983046, 65537, 1, 983047, 65537, 1, 983048, 65537, 1, 983049, 65537, 1, 983050, 65537, 1, 983051, 65537, 1, 983052, 65537, 1, 983053, 65537, 1, 983054, 65537, 1, 983055, 65537, 1, 983056, 65537, 1, 983057, 65537, 1, 983058, 65537, 1, 983059, 65537, 1, 1048576, 65537, 1, 1048577, 65537, 1, 1048578, 65537, 1, 1048579, 65537, 1, 1048580, 65537, 1, 1048581, 65537, 1, 1048582, 65537, 1, 1048583, 65537, 1, 1048584, 65537, 1, 1048585, 65537, 1, 1048586, 65537, 1, 1048587, 65537, 1, 1048588, 65537, 1, 1048589, 65537, 1, 1048590, 65537, 1, 1048591, 65537, 1, 1048592, 65537, 1, 1048593, 65537, 1, 1048594, 65537, 1, 1048595, 65537, 1, 1114111, 65537, 1, 1048575, 65537, 1, 983039, 65537, 1, 917503, 65537, 1, 851967, 65537, 1, 786431, 65537, 1, 720895, 65537, 1, 655359, 65537, 1, 589823, 65537, 1, 524287, 65537, 1, 458751, 65537, 1, 393215, 65537, 1, 327679, 65537, 1, 262143, 65537, 1, 196607, 65537, 1, 131071, 65537, 1, 65535, 65537, 1, 917504, 65537, 1, 917505, 65537, 1)

[node name="EnvironmentLayer" type="TileMap" parent="."]
tile_set = ExtResource("2_ndpu2")
cell_quadrant_size = 64
format = 2

[node name="ConstructionsLayer" type="TileMap" parent="."]
tile_set = ExtResource("4_7mtu1")
format = 2
script = ExtResource("5_jut8w")

[node name="BuildingGrid" type="TileMap" parent="."]
visible = false
tile_set = ExtResource("6_m3qse")
format = 2
layer_0/tile_data = PackedInt32Array(0, 65536, 0, 65536, 65536, 0, 131072, 65536, 0, 196608, 65536, 0, 262144, 65536, 0, 327680, 65536, 0, 393216, 65536, 0, 458752, 65536, 0, 524288, 65536, 0, 589824, 65536, 0, 655360, 65536, 0, 720896, 65536, 0, 1, 65536, 0, 65537, 65536, 0, 131073, 65536, 0, 196609, 65536, 0, 262145, 65536, 0, 327681, 65536, 0, 393217, 65536, 0, 458753, 65536, 0, 524289, 65536, 0, 589825, 65536, 0, 655361, 65536, 0, 720897, 65536, 0, 2, 65536, 0, 65538, 65536, 0, 131074, 65536, 0, 196610, 65536, 0, 262146, 65536, 0, 327682, 65536, 0, 393218, 65536, 0, 458754, 65536, 0, 524290, 65536, 0, 589826, 65536, 0, 655362, 65536, 0, 720898, 65536, 0, 3, 65536, 0, 65539, 65536, 0, 131075, 65536, 0, 196611, 65536, 0, 262147, 65536, 0, 327683, 65536, 0, 393219, 65536, 0, 458755, 65536, 0, 524291, 65536, 0, 589827, 65536, 0, 655363, 65536, 0, 720899, 65536, 0, 4, 65536, 0, 65540, 65536, 0, 131076, 65536, 0, 196612, 65536, 0, 262148, 65536, 0, 327684, 65536, 0, 393220, 65536, 0, 458756, 65536, 0, 524292, 65536, 0, 589828, 65536, 0, 655364, 65536, 0, 720900, 65536, 0, 5, 65536, 0, 65541, 65536, 0, 131077, 65536, 0, 196613, 65536, 0, 262149, 65536, 0, 327685, 65536, 0, 393221, 65536, 0, 458757, 65536, 0, 524293, 65536, 0, 589829, 65536, 0, 655365, 65536, 0, 720901, 65536, 0, 6, 65536, 0, 65542, 65536, 0, 131078, 65536, 0, 196614, 65536, 0, 262150, 65536, 0, 327686, 65536, 0, 393222, 65536, 0, 458758, 65536, 0, 524294, 65536, 0, 589830, 65536, 0, 655366, 65536, 0, 720902, 65536, 0, 7, 65536, 0, 65543, 65536, 0, 131079, 65536, 0, 196615, 65536, 0, 262151, 65536, 0, 327687, 65536, 0, 393223, 65536, 0, 458759, 65536, 0, 524295, 65536, 0, 589831, 65536, 0, 655367, 65536, 0, 720903, 65536, 0, 8, 65536, 0, 65544, 65536, 0, 131080, 65536, 0, 196616, 65536, 0, 262152, 65536, 0, 327688, 65536, 0, 393224, 65536, 0, 458760, 65536, 0, 524296, 65536, 0, 589832, 65536, 0, 655368, 65536, 0, 720904, 65536, 0, 9, 65536, 0, 65545, 65536, 0, 131081, 65536, 0, 196617, 65536, 0, 262153, 65536, 0, 327689, 65536, 0, 393225, 65536, 0, 458761, 65536, 0, 524297, 65536, 0, 589833, 65536, 0, 655369, 65536, 0, 720905, 65536, 0, 10, 65536, 0, 65546, 65536, 0, 131082, 65536, 0, 196618, 65536, 0, 262154, 65536, 0, 327690, 65536, 0, 393226, 65536, 0, 458762, 65536, 0, 524298, 65536, 0, 589834, 65536, 0, 655370, 65536, 0, 720906, 65536, 0, 11, 65536, 0, 65547, 65536, 0, 131083, 65536, 0, 196619, 65536, 0, 262155, 65536, 0, 327691, 65536, 0, 393227, 65536, 0, 458763, 65536, 0, 524299, 65536, 0, 589835, 65536, 0, 655371, 65536, 0, 720907, 65536, 0, 12, 65536, 0, 65548, 65536, 0, 131084, 65536, 0, 196620, 65536, 0, 262156, 65536, 0, 327692, 65536, 0, 393228, 65536, 0, 458764, 65536, 0, 524300, 65536, 0, 589836, 65536, 0, 655372, 65536, 0, 720908, 65536, 0, 13, 65536, 0, 65549, 65536, 0, 131085, 65536, 0, 196621, 65536, 0, 262157, 65536, 0, 327693, 65536, 0, 393229, 65536, 0, 458765, 65536, 0, 524301, 65536, 0, 589837, 65536, 0, 655373, 65536, 0, 720909, 65536, 0, 14, 65536, 0, 65550, 65536, 0, 131086, 65536, 0, 196622, 65536, 0, 262158, 65536, 0, 327694, 65536, 0, 393230, 65536, 0, 458766, 65536, 0, 524302, 65536, 0, 589838, 65536, 0, 655374, 65536, 0, 720910, 65536, 0, 15, 65536, 0, 65551, 65536, 0, 131087, 65536, 0, 196623, 65536, 0, 262159, 65536, 0, 327695, 65536, 0, 393231, 65536, 0, 458767, 65536, 0, 524303, 65536, 0, 589839, 65536, 0, 655375, 65536, 0, 720911, 65536, 0)

[node name="BaseArea" parent="." instance=ExtResource("7_f2gkr")]

[node name="EnemyWavesSpawner" parent="." instance=ExtResource("8_6sipe")]
unique_name_in_owner = true
